[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azuraforge-dbmodels"
version = "0.1.0"
description = "Shared SQLAlchemy ORM models for the AzuraForge ecosystem."
requires-python = ">=3.10"
dependencies = [
    "SQLAlchemy",
    "psycopg2-binary"
]