# ========== DOSYA: dbmodels/pyproject.toml ==========
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azuraforge-dbmodels"
version = "0.2.0"
description = "Shared SQLAlchemy ORM models and Alembic migrations for the AzuraForge ecosystem."
requires-python = ">=3.10"
dependencies = [
    "python-semantic-release",
    "SQLAlchemy",
    "psycopg2-binary",
    "alembic"
]

[tool.semantic_release]
branch = "main"
version_variable = "pyproject.toml:project.version"
upload_to_pypi = false
major_on_zero = false